<resources>
    <string name="app_name">Chess_Online</string>
    <string name="tv_login">Логин:</string>
    <string name="tv_name">Имя:</string>
    <string name="tv_email">Почта:</string>
    <string name="tv_password">Пароль:</string>
    <string name="btn_regisrate">Зарегистрироваться</string>
    <string name="btn_login">Войти</string>
    <string name="navigation_matches_text">Матчи</string>
    <string name="navigation_friends_text">Друзья</string>
    <string name="navigation_profile_text">Профиль</string>
    <string name="chess_online_logo">Chess\nOnline</string>
</resources>