<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <View
        android:id="@+id/background_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="1"
        android:background="@color/background_dark"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_for_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:fontFamily="@font/riffic_bold"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gl_for_logo"
        android:text="@string/chess_online_logo"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.88"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_for_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23"/>
    <TextView
        android:id="@+id/tv_login"
        android:text="@string/tv_login"
        android:textColor="@color/gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/riffic_bold"
        android:textSize="@dimen/gap_font_size"
        android:textAlignment="textStart"
        app:layout_constraintTop_toTopOf="@id/gl_for_form"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"/>
    <EditText
        android:id="@+id/et_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/background_dark"
        android:background="@drawable/edit_text_gap"
        android:textSize="@dimen/gap_font_size"
        android:fontFamily="@font/riffic_bold"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        app:layout_constraintHeight="wrap_content"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <TextView
        android:id="@+id/tv_name"
        android:text="@string/tv_name"
        android:textColor="@color/gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/riffic_bold"
        android:textSize="@dimen/gap_font_size"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/et_login"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/background_dark"
        android:background="@drawable/edit_text_gap"
        android:textSize="@dimen/gap_font_size"
        android:fontFamily="@font/riffic_bold"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintHeight="wrap_content"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <TextView
        android:id="@+id/tv_email"
        android:text="@string/tv_email"
        android:textColor="@color/gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/riffic_bold"
        android:textSize="@dimen/gap_font_size"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        android:layout_marginTop="5dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/background_dark"
        android:background="@drawable/edit_text_gap"
        android:textSize="@dimen/gap_font_size"
        android:fontFamily="@font/riffic_bold"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintHeight="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <TextView
        android:id="@+id/tv_password"
        android:text="@string/tv_password"
        android:textColor="@color/gray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/riffic_bold"
        android:textSize="@dimen/gap_font_size"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/background_dark"
        android:background="@drawable/edit_text_gap"
        android:textSize="@dimen/gap_font_size"
        android:fontFamily="@font/riffic_bold"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintHeight="wrap_content"
        android:maxLines="1"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registrate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/btn_regisrate"
        app:layout_constraintHeight_percent="0.08"
        android:background="@drawable/btn_registrate"
        android:fontFamily="@font/riffic_bold"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        android:layout_marginTop="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/dark_green"
        android:fontFamily="@font/riffic_bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/gl_left"
        app:layout_constraintEnd_toEndOf="@id/gl_right"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/btn_registrate"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background_color"
        />
</androidx.constraintlayout.widget.ConstraintLayout>